@@ -1,3 +1,7 @@
+2001-09-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/devhelp-window.c (devhelp_window_new): set wmclass.
+
 2001-09-02  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* configure.in (ALL_LINGUAS): Added pl.
